esqueleto home+expositores

--- a/src/stylesheets/nav-bar/nav-bar.scss
+++ b/src/stylesheets/nav-bar/nav-bar.scss
@@ -1,5 +1,9 @@
 .nav-bar {
   display: flex;
-  background-color: #ccc;
+  background-color: #dcdcdc;
   padding-left: 20px;
+  padding-bottom: 15px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
