--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,6 +3,7 @@
 @import './layout/index.scss';
 @import './nav-bar/index.scss';
 @import './lightbulb-page/index.scss';
+@import './home_page.scss';
 
 html, body {
   padding: 0;
