update visual + contacto y about

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,8 @@
 @import './lightbulb-page/index.scss';
 @import './home_page/index.scss';
 @import './expositores-page/index.scss';
+@import './contacto-page/index.scss';
+@import './about-page/index.scss';
 
 html, body {
   padding: 0;
