navbar update + proyecto view + rrss

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -7,6 +7,9 @@
 @import './expositores-page/index.scss';
 @import './contacto-page/index.scss';
 @import './about-page/index.scss';
+@import './proyecto-page/index.scss';
+@import './nav-bar-proyectos/index.scss';
+@import './proyecto-rrss-page/index.scss';
 
 html, body {
   padding: 0;
