--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -10,6 +10,8 @@
 @import './proyecto-page/index.scss';
 @import './nav-bar-proyectos/index.scss';
 @import './proyecto-rrss-page/index.scss';
+@import './proyecto-equipo-page/index.scss';
+@import './proyecto-detalles-page/index.scss';
 
 html, body {
   padding: 0;
